First approach. Website selection and Html element list controllers created

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 *.lock
 Problem3/Pods
+Problem3/Problem3.xcworkspace/xcuserdata/Alegege.xcuserdatad/UserInterfaceState.xcuserstate
+Problem3/Problem3.xcworkspace/xcuserdata/Alegege.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
