--- a/Problem3/Podfile
+++ b/Problem3/Podfile
@@ -2,6 +2,7 @@ target 'Problem3' do
 	pod 'Hpple'
 	pod 'MBProgressHUD'
 	pod 'ReactiveCocoa', '~> 2.4'
+	pod 'AFNetworking', '~> 2.5'
 end
 
 target 'Problem3Tests' do
